# b2-wallet

./: .gitignore  LICENSE  LICENSE-PT  Makefile  README.md  index.html  package-lock.json  package.json  privacy-policy.html  turbo.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/extension/: build-extensions.js  manifest.json  package.json
apps/extension/src/: background.js  content.js  popup.html  popup.js
apps/mobile/: capacitor.config.json  package.json
apps/mobile/android/: capacitor.settings.gradle
doc/: AMBIENTE.md  BLOCKCHAIN.md  INTRODUCAO.md  SDK.md  SEGURANCA.md  UI_UX.md  deploy.md  step1.md  step2.md  step3.md  step4.md  step5.md  step6.md  step7.md
src/css/: components.css  design-system.css
src/css/components/: buttons.css  cards.css  forms.css  layout.css  modals.css  premium.css  theme.css
src/js/: README.md  app.js  detector.js
src/js/app/: app-accounts.js  app-auth.js  app-config.js  app-dapp.js  app-events-config.js  app-events-modals.js  app-events-onboarding.js  app-events.js  app-logger.js  app-modals.js  app-staking.js  app-sync.js  (+1 more)
test/: b2_wallet_config_1781624414200.json  bitcoin.test.js  bitcoincash.test.js  cardano.test.js  crypto.test.js  dash.test.js  derivation.test.js  dogecoin.test.js  electroneum.test.js  evm-networks.test.js  evm.test.js  filecoin.test.js  icp.test.js  litecoin.test.js  monero.test.js  neo.test.js  polkadot.test.js  sdk.test.js  setup.js  solana.test.js  stellar.test.js  tron.test.js  waves.test.js  zcash.test.js
(+84 files in other folders)
