[package]
name = "b2-wallet-desktop-backend"
version = "0.1.3"
description = "Tauri backend para B2 Wallet Desktop"
edition = "2021"
authors = ["Diego Oris <better2better.com.br>"]

[build-dependencies]
tauri-build = { version = "2.0" }

[dependencies]
tauri = { version = "2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
b2-wallet-core = { path = "../../../packages/core-rust" }
